<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AppFragment">

    <LinearLayout
        android:layout_marginHorizontal="57dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="100dp"
            android:src="@drawable/img_404"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:includeFontPadding="false"
            android:textSize="22sp"
            android:fontFamily="@font/chakra_petch_medium"
            android:textColor="@color/white"
            android:text="@string/tv_not_connected"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textSize="14sp"
            android:fontFamily="@font/chakra_petch_regular"
            android:textColor="@color/white"
            android:text="@string/connect_to_your"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_app"
            android:paddingHorizontal="60dp"
            android:paddingVertical="8dp"
            android:textSize="20sp"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:fontFamily="@font/chakra_petch_regular"
            android:layout_gravity="center"
            android:text="@string/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>