<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SettingFragment">

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/bg_premium"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center"
                android:textStyle="italic"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:text="@string/upgrade_to"
                android:fontFamily="@font/chakra_petch_light"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="30sp"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/chakra_petch_bold"
                    android:textColor="@color/white"
                    android:text="@string/premium"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_premium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:backgroundTint="#33D9D9D9"
        android:background="@drawable/corner_10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icHaptic"
                android:layout_marginStart="17dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_haptic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/chakra_petch_regular"
                android:textColor="@color/white"
                android:text="@string/haptic_feedback"
                android:layout_toEndOf="@id/icHaptic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/swSetting"
                android:checked="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="14dp"
                android:thumb="@drawable/custom_thumb"
                android:track="@drawable/custom_track"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <View
            android:layout_marginTop="6dp"
            android:background="#80150D28"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icQuestion"
                android:layout_marginStart="17dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/chakra_petch_regular"
                android:textColor="@color/white"
                android:text="@string/frequently_asked_questions"
                android:layout_toEndOf="@id/icQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <View
            android:layout_marginTop="6dp"
            android:background="#80150D28"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icRestore"
                android:layout_marginStart="19dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_restore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="16sp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="14dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/chakra_petch_regular"
                android:textColor="@color/white"
                android:text="@string/restore_purchase"
                android:layout_toEndOf="@id/icRestore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:backgroundTint="#33D9D9D9"
        android:background="@drawable/corner_10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icApp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_app"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <TextView
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/chakra_petch_regular"
                android:textColor="@color/white"
                android:text="@string/more_apps"
                android:layout_toEndOf="@id/icApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:backgroundTint="#33D9D9D9"
        android:background="@drawable/corner_10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icPolicy"
                android:layout_marginStart="17dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/chakra_petch_regular"
                android:textColor="@color/white"
                android:text="@string/privacy_policy"
                android:layout_toEndOf="@id/icPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <View
            android:layout_marginTop="6dp"
            android:background="#80150D28"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icTerm"
                android:layout_marginStart="17dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/chakra_petch_regular"
                android:textColor="@color/white"
                android:text="@string/terms_of_use"
                android:layout_toEndOf="@id/icTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <View
            android:layout_marginTop="6dp"
            android:background="#80150D28"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icContact"
                android:layout_marginStart="17dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/chakra_petch_regular"
                android:textColor="@color/white"
                android:text="@string/contact_us"
                android:layout_toEndOf="@id/icContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <View
            android:layout_marginTop="6dp"
            android:background="#80150D28"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icTell"
                android:layout_marginStart="17dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_tell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/chakra_petch_regular"
                android:textColor="@color/white"
                android:text="@string/tell_friends"
                android:layout_toEndOf="@id/icTell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>